add missing user endpoints to swagger tag grouping, tried to debug default endpoints to no avail
